# inteGraality

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  ansible.cfg  app.py  docker-compose.yml  pages_processor.py  property_statistics.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_pages_processor.py  tox.ini
conf/: Dockerfile.web
deploy/: hosts  main.yml
deploy/templates/: uwsgi.ini.j2
integraality/: app.py  cache.py  column.py  column_config.py  config_assembler.py  error_category.py  grouping.py  grouping_link.py  grouping_page_creator.py  line.py  page_saving.py  pages_processor.py  property_statistics.py  results_formatter.py  sparql_utils.py  sse.py  wikiprojects.json
integraality/static/: toolinfo.json
integraality/templates/: base.html  index.html  page_not_found.html  queries.html  queries_error.html  queries_unknown_error.html  update.html  update_error.html  update_query_error.html  update_stream.html  update_transient_error.html  update_unknown_error.html
integraality/tests/: conftest.py  test_app.py  test_column.py  test_column_config.py  test_config_assembler.py  test_grouping.py  test_grouping_link.py  test_grouping_page_creator.py  test_line.py  test_page_saving.py  test_pages_processor.py  test_property_statistics.py  test_results_formatter.py  test_sparql_utils.py  test_sse.py
templates/: base.html  index.html  page_not_found.html  update.html
