[project]
name = "integraality"
version = "0.0.1"
requires-python = "~=3.11.0"
dependencies = [
    "pywikibot",
    "flask",
    "redis",
    "mwparserfromhell",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "fakeredis",
]

[tool.ruff.lint]
select = ["I"]

[tool.uv]
package = false
